--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@
 server.port = 8081
 
 ## Configura URL do banco
-## É importante que o MySQL esteja preparado com o banco antes de executar esse programa
+## Ã‰ importante que o MySQL esteja preparado com o banco antes de executar esse programa
 spring.datasource.url=jdbc:mysql://localhost:3306/momento\
    
-## Usuário de acesso
+## UsuÃ¡rio de acesso
 spring.datasource.username=root
 
 ## Senha do banco
-spring.datasource.password=senac
+spring.datasource.password=
 
-## Configura atualizações do banco
+## Configura atualizaÃ§Ãµes do banco
 spring.jpa.hibernate.ddl-auto=update
 
-## Configuração que mostra que o SQL que foi executado
+## ConfiguraÃ§Ã£o que mostra que o SQL que foi executado
 spring.jpa.properties.hibernate.show_sql=true
