--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-## Porta em que a API ser· executada.
+## Porta em que a API ser√° executada.
 ## Algo como http://localhost:{porta}/
 server.port = 8083
 
-## ConfiguraÁ„o URL de conex„o com o banco
+## Configura√ß√£o URL de conex√£o com o banco
 ## Importante que o MySQL esteja preparado com o banco antes de executar esse programa
 spring.datasource.url=jdbc:mysql://localhost:3306/momento\
    
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/momento\
 spring.datasource.username=root
 
 ## Senha do banco
-spring.datasource.password=senac
+spring.datasource.password=
 
 ## Configuracao de atualizacoes do banco
 spring.jpa.hibernate.ddl-auto=none
