--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -4,13 +4,13 @@ server.port = 8083
 
 ## Configuração URL de conexão com o banco
 ## Importante que o MySQL esteja preparado com o banco antes de executar esse programa
-spring.datasource.url=jdbc:mysql://localhost:3306/momento\
+spring.datasource.url=jdbc:mysql://localhost:3308/momento
    
 ## Usuario de acesso
 spring.datasource.username=root
 
 ## Senha do banco
-spring.datasource.password=
+spring.datasource.password=senac
 
 ## Configuracao de atualizacoes do banco
 spring.jpa.hibernate.ddl-auto=none
